<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.maks.database.activities.AddActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <EditText
        android:hint="@string/t_name"
        style="@style/EditStyle"
        android:id="@+id/edit_name"/>
    <EditText
        android:hint="@string/t_surname"
        style="@style/EditStyle"
        android:id="@+id/edit_surname"/>
    <EditText
        android:hint="@string/t_address"
        style="@style/EditStyle"
        android:id="@+id/edit_address"/>
    <EditText
        android:hint="@string/t_email"
        style="@style/EditStyle"
        android:id="@+id/edit_email"/>

    <EditText
        android:hint="@string/t_phone"
        style="@style/EditStyle"
        android:id="@+id/edit_phone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_btn"
        android:id="@+id/add_btn_addActivity"
        android:backgroundTint="@color/Green"/>

    </LinearLayout>
</ScrollView>
